--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-iconv": "*",
         "sensio/framework-extra-bundle": "^5.1",
+        "solarium/solarium": "^4.0.0-rc.1",
         "symfony/apache-pack": "^1.0",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
@@ -61,5 +62,6 @@
             "id": "01CAWZFWYNWC8FWCBHFTJ0QCJJ",
             "allow-contrib": false
         }
-    }
+    },
+    "minimum-stability": "RC"
 }
