--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,8 @@
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
+        "symfony/browser-kit": "^4.0",
+        "symfony/css-selector": "^4.0",
         "symfony/dotenv": "^4.0",
         "symfony/phpunit-bridge": "^4.0",
         "symfony/profiler-pack": "^1.0"
